(server): adjust JVM args, enable generational ZGC, and reformat a bit